# age-plugin-openpgp-card

./: .env  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.github/workflows/: docker.yml  rust.yml
scripts/: encrypt-decrypt.sh  fake-pinentry.sh
src/: main.rs
