[package]
name = "age-plugin-openpgp-card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age-core = "0.10.0"
age-plugin = "0.5.0"
base64 = "0.22.0"
card-backend-pcsc = "0.5.0"
clap = { version = "4.5.4", features = ["derive"] }
openpgp-card = "0.4.2"
x25519-dalek = "2.0.1"
