[package]
name = "age-plugin-openpgp-card"
description = "Age plugin for using ed25519 on OpenPGP Card devices (Yubikeys, Nitrokeys)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["age", "cli", "encryption", "openpgp", "yubikey"]
categories = ["command-line-utilities", "cryptography"]
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
repository = "https://github.com/wiktor-k/age-plugin-openpgp-card"

[dependencies]
age-core = "0.10.0"
age-plugin = "0.5.0"
base64 = "0.22.0"
bech32 = "0.9"
card-backend-pcsc = "0.5.0"
clap = { version = "4.5.4", features = ["derive"] }
openpgp-card = "0.4.2"
subtle = "2.5.0"
thiserror = "1.0.58"
x25519-dalek = "2.0.1"
zeroize = "1.7.0"
